Corrected overflowing Image in about page

--- a/src/index.css
+++ b/src/index.css
@@ -307,20 +307,24 @@ body {
   gap: 3rem;
   padding: 40px;
   max-width: 1200px;
+  height:90vh ;
   margin: auto;
   flex-wrap: wrap;
   margin-bottom: 10px;
+  /* border: 1px solid red; */
 }
 
 /* LEFT - Image */
 .about-image-wrapper {
   flex: 1;
   min-width: 300px;
+  /* border: 1px solid green; */
+  height: 100%;
 }
 
 .about-image {
   width: 100%;
-  height: auto;
+  height: 70%;
   border-radius: 12px;
   object-fit: cover;
   box-shadow: 0 4px 15px rgba(0,0,0,0.1);
